parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> empty
Rule 2     program -> statements
Rule 3     statements -> statements statement
Rule 4     statements -> statement
Rule 5     statement -> expr SEP
Rule 6     statement -> var_assign SEP
Rule 7     statement -> LET var : var_type SEP
Rule 8     statement -> var_define SEP
Rule 9     statement -> if_statement
Rule 10    statement -> for_statement
Rule 11    statement -> while_statement
Rule 12    statement -> return_statement
Rule 13    statement -> function_definition
Rule 14    var_type -> BOOL_TYPE
Rule 15    var_type -> STRING_TYPE
Rule 16    var_type -> FLOAT_TYPE
Rule 17    var_type -> INT_TYPE
Rule 18    function_definition -> FN ID ( params ) block
Rule 19    var_define -> LET var ASSIGN expr
Rule 20    return_statement -> RETURN expr SEP
Rule 21    var_assign -> DEC var  [precedence=right, level=11]
Rule 22    var_assign -> INC var  [precedence=right, level=11]
Rule 23    var_assign -> var MODULOASGN expr  [precedence=right, level=1]
Rule 24    var_assign -> var SLASHASGN expr  [precedence=right, level=1]
Rule 25    var_assign -> var STARASGN expr  [precedence=right, level=1]
Rule 26    var_assign -> var MINUSASGN expr  [precedence=right, level=1]
Rule 27    var_assign -> var PLUSASGN expr  [precedence=right, level=1]
Rule 28    var_assign -> var ASSIGN expr
Rule 29    if_statement -> IF expr block
Rule 30    if_statement -> IF expr block ELSE block
Rule 31    while_statement -> WHILE expr block
Rule 32    for_statement -> FOR var_assign SEP expr SEP var_assign block
Rule 33    expr -> var
Rule 34    expr -> FALSE
Rule 35    expr -> TRUE
Rule 36    expr -> STRING
Rule 37    expr -> FLOAT
Rule 38    expr -> INT
Rule 39    expr -> ( expr )
Rule 40    expr -> expr % expr  [precedence=left, level=10]
Rule 41    expr -> expr / expr  [precedence=left, level=10]
Rule 42    expr -> expr * expr  [precedence=left, level=10]
Rule 43    expr -> expr - expr  [precedence=left, level=9]
Rule 44    expr -> expr + expr  [precedence=left, level=9]
Rule 45    expr -> ! expr  [precedence=right, level=12]
Rule 46    expr -> + expr  [precedence=right, level=11]
Rule 47    expr -> - expr  [precedence=right, level=11]
Rule 48    expr -> expr | expr  [precedence=left, level=4]
Rule 49    expr -> expr ^ expr  [precedence=left, level=5]
Rule 50    expr -> expr & expr  [precedence=left, level=6]
Rule 51    expr -> expr GREATER expr  [precedence=left, level=8]
Rule 52    expr -> expr LESS expr  [precedence=left, level=8]
Rule 53    expr -> expr OR expr  [precedence=left, level=2]
Rule 54    expr -> expr AND expr  [precedence=left, level=3]
Rule 55    expr -> expr GREATEREQ expr  [precedence=left, level=8]
Rule 56    expr -> expr LESSEQ expr  [precedence=left, level=8]
Rule 57    expr -> expr NOTEQ expr  [precedence=left, level=7]
Rule 58    expr -> expr EQEQ expr  [precedence=left, level=7]
Rule 59    expr -> ID ( args )
Rule 60    expr -> expr ? expr : expr
Rule 61    var -> ID
Rule 62    empty -> <empty>
Rule 63    block -> statement
Rule 64    block -> { program }
Rule 65    params -> empty
Rule 66    params -> param
Rule 67    params -> params , param
Rule 68    param -> ID : var_type
Rule 69    args -> empty
Rule 70    args -> arg
Rule 71    args -> args , arg
Rule 72    arg -> expr

Terminals, with rules where they appear:

!                    : 45
%                    : 40
&                    : 50
(                    : 18 39 59
)                    : 18 39 59
*                    : 42
+                    : 44 46
,                    : 67 71
-                    : 43 47
/                    : 41
:                    : 7 60 68
?                    : 60
AND                  : 54
ASSIGN               : 19 28
BOOL_TYPE            : 14
DEC                  : 21
ELSE                 : 30
EQEQ                 : 58
FALSE                : 34
FLOAT                : 37
FLOAT_TYPE           : 16
FN                   : 18
FOR                  : 32
GREATER              : 51
GREATEREQ            : 55
ID                   : 18 59 61 68
IF                   : 29 30
INC                  : 22
INT                  : 38
INT_TYPE             : 17
LESS                 : 52
LESSEQ               : 56
LET                  : 7 19
MINUSASGN            : 26
MODULOASGN           : 23
NOTEQ                : 57
OR                   : 53
PLUSASGN             : 27
RETURN               : 20
SEP                  : 5 6 7 8 20 32 32
SLASHASGN            : 24
STARASGN             : 25
STRING               : 36
STRING_TYPE          : 15
TRUE                 : 35
WHILE                : 31
^                    : 49
error                : 
{                    : 64
|                    : 48
}                    : 64

Nonterminals, with rules where they appear:

arg                  : 70 71
args                 : 59 71
block                : 18 29 30 30 31 32
empty                : 1 65 69
expr                 : 5 19 20 23 24 25 26 27 28 29 30 31 32 39 40 40 41 41 42 42 43 43 44 44 45 46 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 60 60 60 72
for_statement        : 10
function_definition  : 13
if_statement         : 9
param                : 66 67
params               : 18 67
program              : 64 0
return_statement     : 12
statement            : 3 4 63
statements           : 2 3
var                  : 7 19 21 22 23 24 25 26 27 28 33
var_assign           : 6 32 32
var_define           : 8
var_type             : 7 68
while_statement      : 11


state 0

    (0) S' -> . program
    (1) program -> . empty
    (2) program -> . statements
    (62) empty -> .
    (3) statements -> . statements statement
    (4) statements -> . statement
    (5) statement -> . expr SEP
    (6) statement -> . var_assign SEP
    (7) statement -> . LET var : var_type SEP
    (8) statement -> . var_define SEP
    (9) statement -> . if_statement
    (10) statement -> . for_statement
    (11) statement -> . while_statement
    (12) statement -> . return_statement
    (13) statement -> . function_definition
    (33) expr -> . var
    (34) expr -> . FALSE
    (35) expr -> . TRUE
    (36) expr -> . STRING
    (37) expr -> . FLOAT
    (38) expr -> . INT
    (39) expr -> . ( expr )
    (40) expr -> . expr % expr
    (41) expr -> . expr / expr
    (42) expr -> . expr * expr
    (43) expr -> . expr - expr
    (44) expr -> . expr + expr
    (45) expr -> . ! expr
    (46) expr -> . + expr
    (47) expr -> . - expr
    (48) expr -> . expr | expr
    (49) expr -> . expr ^ expr
    (50) expr -> . expr & expr
    (51) expr -> . expr GREATER expr
    (52) expr -> . expr LESS expr
    (53) expr -> . expr OR expr
    (54) expr -> . expr AND expr
    (55) expr -> . expr GREATEREQ expr
    (56) expr -> . expr LESSEQ expr
    (57) expr -> . expr NOTEQ expr
    (58) expr -> . expr EQEQ expr
    (59) expr -> . ID ( args )
    (60) expr -> . expr ? expr : expr
    (21) var_assign -> . DEC var
    (22) var_assign -> . INC var
    (23) var_assign -> . var MODULOASGN expr
    (24) var_assign -> . var SLASHASGN expr
    (25) var_assign -> . var STARASGN expr
    (26) var_assign -> . var MINUSASGN expr
    (27) var_assign -> . var PLUSASGN expr
    (28) var_assign -> . var ASSIGN expr
    (19) var_define -> . LET var ASSIGN expr
    (29) if_statement -> . IF expr block
    (30) if_statement -> . IF expr block ELSE block
    (32) for_statement -> . FOR var_assign SEP expr SEP var_assign block
    (31) while_statement -> . WHILE expr block
    (20) return_statement -> . RETURN expr SEP
    (18) function_definition -> . FN ID ( params ) block
    (61) var -> . ID
    $end            reduce using rule 62 (empty -> .)
    LET             shift and go to state 7
    FALSE           shift and go to state 15
    TRUE            shift and go to state 16
    STRING          shift and go to state 17
    FLOAT           shift and go to state 18
    INT             shift and go to state 19
    (               shift and go to state 20
    !               shift and go to state 23
    +               shift and go to state 22
    -               shift and go to state 21
    ID              shift and go to state 24
    DEC             shift and go to state 25
    INC             shift and go to state 26
    IF              shift and go to state 27
    FOR             shift and go to state 28
    WHILE           shift and go to state 29
    RETURN          shift and go to state 30
    FN              shift and go to state 31

    program                        shift and go to state 1
    empty                          shift and go to state 2
    statements                     shift and go to state 3
    statement                      shift and go to state 4
    expr                           shift and go to state 5
    var_assign                     shift and go to state 6
    var                            shift and go to state 8
    var_define                     shift and go to state 9
    if_statement                   shift and go to state 10
    for_statement                  shift and go to state 11
    while_statement                shift and go to state 12
    return_statement               shift and go to state 13
    function_definition            shift and go to state 14

state 1

    (0) S' -> program .


state 2

    (1) program -> empty .
    $end            reduce using rule 1 (program -> empty .)
    }               reduce using rule 1 (program -> empty .)


state 3

    (2) program -> statements .
    (3) statements -> statements . statement
    (5) statement -> . expr SEP
    (6) statement -> . var_assign SEP
    (7) statement -> . LET var : var_type SEP
    (8) statement -> . var_define SEP
    (9) statement -> . if_statement
    (10) statement -> . for_statement
    (11) statement -> . while_statement
    (12) statement -> . return_statement
    (13) statement -> . function_definition
    (33) expr -> . var
    (34) expr -> . FALSE
    (35) expr -> . TRUE
    (36) expr -> . STRING
    (37) expr -> . FLOAT
    (38) expr -> . INT
    (39) expr -> . ( expr )
    (40) expr -> . expr % expr
    (41) expr -> . expr / expr
    (42) expr -> . expr * expr
    (43) expr -> . expr - expr
    (44) expr -> . expr + expr
    (45) expr -> . ! expr
    (46) expr -> . + expr
    (47) expr -> . - expr
    (48) expr -> . expr | expr
    (49) expr -> . expr ^ expr
    (50) expr -> . expr & expr
    (51) expr -> . expr GREATER expr
    (52) expr -> . expr LESS expr
    (53) expr -> . expr OR expr
    (54) expr -> . expr AND expr
    (55) expr -> . expr GREATEREQ expr
    (56) expr -> . expr LESSEQ expr
    (57) expr -> . expr NOTEQ expr
    (58) expr -> . expr EQEQ expr
    (59) expr -> . ID ( args )
    (60) expr -> . expr ? expr : expr
    (21) var_assign -> . DEC var
    (22) var_assign -> . INC var
    (23) var_assign -> . var MODULOASGN expr
    (24) var_assign -> . var SLASHASGN expr
    (25) var_assign -> . var STARASGN expr
    (26) var_assign -> . var MINUSASGN expr
    (27) var_assign -> . var PLUSASGN expr
    (28) var_assign -> . var ASSIGN expr
    (19) var_define -> . LET var ASSIGN expr
    (29) if_statement -> . IF expr block
    (30) if_statement -> . IF expr block ELSE block
    (32) for_statement -> . FOR var_assign SEP expr SEP var_assign block
    (31) while_statement -> . WHILE expr block
    (20) return_statement -> . RETURN expr SEP
    (18) function_definition -> . FN ID ( params ) block
    (61) var -> . ID
    $end            reduce using rule 2 (program -> statements .)
    }               reduce using rule 2 (program -> statements .)
    LET             shift and go to state 7
    FALSE           shift and go to state 15
    TRUE            shift and go to state 16
    STRING          shift and go to state 17
    FLOAT           shift and go to state 18
    INT             shift and go to state 19
    (               shift and go to state 20
    !               shift and go to state 23
    +               shift and go to state 22
    -               shift and go to state 21
    ID              shift and go to state 24
    DEC             shift and go to state 25
    INC             shift and go to state 26
    IF              shift and go to state 27
    FOR             shift and go to state 28
    WHILE           shift and go to state 29
    RETURN          shift and go to state 30
    FN              shift and go to state 31

    statement                      shift and go to state 32
    expr                           shift and go to state 5
    var_assign                     shift and go to state 6
    var                            shift and go to state 8
    var_define                     shift and go to state 9
    if_statement                   shift and go to state 10
    for_statement                  shift and go to state 11
    while_statement                shift and go to state 12
    return_statement               shift and go to state 13
    function_definition            shift and go to state 14

state 4

    (4) statements -> statement .
    LET             reduce using rule 4 (statements -> statement .)
    FALSE           reduce using rule 4 (statements -> statement .)
    TRUE            reduce using rule 4 (statements -> statement .)
    STRING          reduce using rule 4 (statements -> statement .)
    FLOAT           reduce using rule 4 (statements -> statement .)
    INT             reduce using rule 4 (statements -> statement .)
    (               reduce using rule 4 (statements -> statement .)
    !               reduce using rule 4 (statements -> statement .)
    +               reduce using rule 4 (statements -> statement .)
    -               reduce using rule 4 (statements -> statement .)
    ID              reduce using rule 4 (statements -> statement .)
    DEC             reduce using rule 4 (statements -> statement .)
    INC             reduce using rule 4 (statements -> statement .)
    IF              reduce using rule 4 (statements -> statement .)
    FOR             reduce using rule 4 (statements -> statement .)
    WHILE           reduce using rule 4 (statements -> statement .)
    RETURN          reduce using rule 4 (statements -> statement .)
    FN              reduce using rule 4 (statements -> statement .)
    $end            reduce using rule 4 (statements -> statement .)
    }               reduce using rule 4 (statements -> statement .)


state 5

    (5) statement -> expr . SEP
    (40) expr -> expr . % expr
    (41) expr -> expr . / expr
    (42) expr -> expr . * expr
    (43) expr -> expr . - expr
    (44) expr -> expr . + expr
    (48) expr -> expr . | expr
    (49) expr -> expr . ^ expr
    (50) expr -> expr . & expr
    (51) expr -> expr . GREATER expr
    (52) expr -> expr . LESS expr
    (53) expr -> expr . OR expr
    (54) expr -> expr . AND expr
    (55) expr -> expr . GREATEREQ expr
    (56) expr -> expr . LESSEQ expr
    (57) expr -> expr . NOTEQ expr
    (58) expr -> expr . EQEQ expr
    (60) expr -> expr . ? expr : expr
    SEP             shift and go to state 33
    %               shift and go to state 34
    /               shift and go to state 35
    *               shift and go to state 36
    -               shift and go to state 37
    +               shift and go to state 38
    |               shift and go to state 39
    ^               shift and go to state 40
    &               shift and go to state 41
    GREATER         shift and go to state 42
    LESS            shift and go to state 43
    OR              shift and go to state 44
    AND             shift and go to state 45
    GREATEREQ       shift and go to state 46
    LESSEQ          shift and go to state 47
    NOTEQ           shift and go to state 48
    EQEQ            shift and go to state 49
    ?               shift and go to state 50


state 6

    (6) statement -> var_assign . SEP
    SEP             shift and go to state 51


state 7

    (7) statement -> LET . var : var_type SEP
    (19) var_define -> LET . var ASSIGN expr
    (61) var -> . ID
    ID              shift and go to state 53

    var                            shift and go to state 52

state 8

    (33) expr -> var .
    (23) var_assign -> var . MODULOASGN expr
    (24) var_assign -> var . SLASHASGN expr
    (25) var_assign -> var . STARASGN expr
    (26) var_assign -> var . MINUSASGN expr
    (27) var_assign -> var . PLUSASGN expr
    (28) var_assign -> var . ASSIGN expr
    SEP             reduce using rule 33 (expr -> var .)
    %               reduce using rule 33 (expr -> var .)
    /               reduce using rule 33 (expr -> var .)
    *               reduce using rule 33 (expr -> var .)
    -               reduce using rule 33 (expr -> var .)
    +               reduce using rule 33 (expr -> var .)
    |               reduce using rule 33 (expr -> var .)
    ^               reduce using rule 33 (expr -> var .)
    &               reduce using rule 33 (expr -> var .)
    GREATER         reduce using rule 33 (expr -> var .)
    LESS            reduce using rule 33 (expr -> var .)
    OR              reduce using rule 33 (expr -> var .)
    AND             reduce using rule 33 (expr -> var .)
    GREATEREQ       reduce using rule 33 (expr -> var .)
    LESSEQ          reduce using rule 33 (expr -> var .)
    NOTEQ           reduce using rule 33 (expr -> var .)
    EQEQ            reduce using rule 33 (expr -> var .)
    ?               reduce using rule 33 (expr -> var .)
    MODULOASGN      shift and go to state 54
    SLASHASGN       shift and go to state 55
    STARASGN        shift and go to state 56
    MINUSASGN       shift and go to state 57
    PLUSASGN        shift and go to state 58
    ASSIGN          shift and go to state 59


state 9

    (8) statement -> var_define . SEP
    SEP             shift and go to state 60


state 10

    (9) statement -> if_statement .
    LET             reduce using rule 9 (statement -> if_statement .)
    FALSE           reduce using rule 9 (statement -> if_statement .)
    TRUE            reduce using rule 9 (statement -> if_statement .)
    STRING          reduce using rule 9 (statement -> if_statement .)
    FLOAT           reduce using rule 9 (statement -> if_statement .)
    INT             reduce using rule 9 (statement -> if_statement .)
    (               reduce using rule 9 (statement -> if_statement .)
    !               reduce using rule 9 (statement -> if_statement .)
    +               reduce using rule 9 (statement -> if_statement .)
    -               reduce using rule 9 (statement -> if_statement .)
    ID              reduce using rule 9 (statement -> if_statement .)
    DEC             reduce using rule 9 (statement -> if_statement .)
    INC             reduce using rule 9 (statement -> if_statement .)
    IF              reduce using rule 9 (statement -> if_statement .)
    FOR             reduce using rule 9 (statement -> if_statement .)
    WHILE           reduce using rule 9 (statement -> if_statement .)
    RETURN          reduce using rule 9 (statement -> if_statement .)
    FN              reduce using rule 9 (statement -> if_statement .)
    $end            reduce using rule 9 (statement -> if_statement .)
    }               reduce using rule 9 (statement -> if_statement .)
    ELSE            reduce using rule 9 (statement -> if_statement .)


state 11

    (10) statement -> for_statement .
    LET             reduce using rule 10 (statement -> for_statement .)
    FALSE           reduce using rule 10 (statement -> for_statement .)
    TRUE            reduce using rule 10 (statement -> for_statement .)
    STRING          reduce using rule 10 (statement -> for_statement .)
    FLOAT           reduce using rule 10 (statement -> for_statement .)
    INT             reduce using rule 10 (statement -> for_statement .)
    (               reduce using rule 10 (statement -> for_statement .)
    !               reduce using rule 10 (statement -> for_statement .)
    +               reduce using rule 10 (statement -> for_statement .)
    -               reduce using rule 10 (statement -> for_statement .)
    ID              reduce using rule 10 (statement -> for_statement .)
    DEC             reduce using rule 10 (statement -> for_statement .)
    INC             reduce using rule 10 (statement -> for_statement .)
    IF              reduce using rule 10 (statement -> for_statement .)
    FOR             reduce using rule 10 (statement -> for_statement .)
    WHILE           reduce using rule 10 (statement -> for_statement .)
    RETURN          reduce using rule 10 (statement -> for_statement .)
    FN              reduce using rule 10 (statement -> for_statement .)
    $end            reduce using rule 10 (statement -> for_statement .)
    }               reduce using rule 10 (statement -> for_statement .)
    ELSE            reduce using rule 10 (statement -> for_statement .)


state 12

    (11) statement -> while_statement .
    LET             reduce using rule 11 (statement -> while_statement .)
    FALSE           reduce using rule 11 (statement -> while_statement .)
    TRUE            reduce using rule 11 (statement -> while_statement .)
    STRING          reduce using rule 11 (statement -> while_statement .)
    FLOAT           reduce using rule 11 (statement -> while_statement .)
    INT             reduce using rule 11 (statement -> while_statement .)
    (               reduce using rule 11 (statement -> while_statement .)
    !               reduce using rule 11 (statement -> while_statement .)
    +               reduce using rule 11 (statement -> while_statement .)
    -               reduce using rule 11 (statement -> while_statement .)
    ID              reduce using rule 11 (statement -> while_statement .)
    DEC             reduce using rule 11 (statement -> while_statement .)
    INC             reduce using rule 11 (statement -> while_statement .)
    IF              reduce using rule 11 (statement -> while_statement .)
    FOR             reduce using rule 11 (statement -> while_statement .)
    WHILE           reduce using rule 11 (statement -> while_statement .)
    RETURN          reduce using rule 11 (statement -> while_statement .)
    FN              reduce using rule 11 (statement -> while_statement .)
    $end            reduce using rule 11 (statement -> while_statement .)
    }               reduce using rule 11 (statement -> while_statement .)
    ELSE            reduce using rule 11 (statement -> while_statement .)


state 13

    (12) statement -> return_statement .
    LET             reduce using rule 12 (statement -> return_statement .)
    FALSE           reduce using rule 12 (statement -> return_statement .)
    TRUE            reduce using rule 12 (statement -> return_statement .)
    STRING          reduce using rule 12 (statement -> return_statement .)
    FLOAT           reduce using rule 12 (statement -> return_statement .)
    INT             reduce using rule 12 (statement -> return_statement .)
    (               reduce using rule 12 (statement -> return_statement .)
    !               reduce using rule 12 (statement -> return_statement .)
    +               reduce using rule 12 (statement -> return_statement .)
    -               reduce using rule 12 (statement -> return_statement .)
    ID              reduce using rule 12 (statement -> return_statement .)
    DEC             reduce using rule 12 (statement -> return_statement .)
    INC             reduce using rule 12 (statement -> return_statement .)
    IF              reduce using rule 12 (statement -> return_statement .)
    FOR             reduce using rule 12 (statement -> return_statement .)
    WHILE           reduce using rule 12 (statement -> return_statement .)
    RETURN          reduce using rule 12 (statement -> return_statement .)
    FN              reduce using rule 12 (statement -> return_statement .)
    $end            reduce using rule 12 (statement -> return_statement .)
    }               reduce using rule 12 (statement -> return_statement .)
    ELSE            reduce using rule 12 (statement -> return_statement .)


state 14

    (13) statement -> function_definition .
    LET             reduce using rule 13 (statement -> function_definition .)
    FALSE           reduce using rule 13 (statement -> function_definition .)
    TRUE            reduce using rule 13 (statement -> function_definition .)
    STRING          reduce using rule 13 (statement -> function_definition .)
    FLOAT           reduce using rule 13 (statement -> function_definition .)
    INT             reduce using rule 13 (statement -> function_definition .)
    (               reduce using rule 13 (statement -> function_definition .)
    !               reduce using rule 13 (statement -> function_definition .)
    +               reduce using rule 13 (statement -> function_definition .)
    -               reduce using rule 13 (statement -> function_definition .)
    ID              reduce using rule 13 (statement -> function_definition .)
    DEC             reduce using rule 13 (statement -> function_definition .)
    INC             reduce using rule 13 (statement -> function_definition .)
    IF              reduce using rule 13 (statement -> function_definition .)
    FOR             reduce using rule 13 (statement -> function_definition .)
    WHILE           reduce using rule 13 (statement -> function_definition .)
    RETURN          reduce using rule 13 (statement -> function_definition .)
    FN              reduce using rule 13 (statement -> function_definition .)
    $end            reduce using rule 13 (statement -> function_definition .)
    }               reduce using rule 13 (statement -> function_definition .)
    ELSE            reduce using rule 13 (statement -> function_definition .)


state 15

    (34) expr -> FALSE .
    SEP             reduce using rule 34 (expr -> FALSE .)
    %               reduce using rule 34 (expr -> FALSE .)
    /               reduce using rule 34 (expr -> FALSE .)
    *               reduce using rule 34 (expr -> FALSE .)
    -               reduce using rule 34 (expr -> FALSE .)
    +               reduce using rule 34 (expr -> FALSE .)
    |               reduce using rule 34 (expr -> FALSE .)
    ^               reduce using rule 34 (expr -> FALSE .)
    &               reduce using rule 34 (expr -> FALSE .)
    GREATER         reduce using rule 34 (expr -> FALSE .)
    LESS            reduce using rule 34 (expr -> FALSE .)
    OR              reduce using rule 34 (expr -> FALSE .)
    AND             reduce using rule 34 (expr -> FALSE .)
    GREATEREQ       reduce using rule 34 (expr -> FALSE .)
    LESSEQ          reduce using rule 34 (expr -> FALSE .)
    NOTEQ           reduce using rule 34 (expr -> FALSE .)
    EQEQ            reduce using rule 34 (expr -> FALSE .)
    ?               reduce using rule 34 (expr -> FALSE .)
    )               reduce using rule 34 (expr -> FALSE .)
    {               reduce using rule 34 (expr -> FALSE .)
    LET             reduce using rule 34 (expr -> FALSE .)
    FALSE           reduce using rule 34 (expr -> FALSE .)
    TRUE            reduce using rule 34 (expr -> FALSE .)
    STRING          reduce using rule 34 (expr -> FALSE .)
    FLOAT           reduce using rule 34 (expr -> FALSE .)
    INT             reduce using rule 34 (expr -> FALSE .)
    (               reduce using rule 34 (expr -> FALSE .)
    !               reduce using rule 34 (expr -> FALSE .)
    ID              reduce using rule 34 (expr -> FALSE .)
    DEC             reduce using rule 34 (expr -> FALSE .)
    INC             reduce using rule 34 (expr -> FALSE .)
    IF              reduce using rule 34 (expr -> FALSE .)
    FOR             reduce using rule 34 (expr -> FALSE .)
    WHILE           reduce using rule 34 (expr -> FALSE .)
    RETURN          reduce using rule 34 (expr -> FALSE .)
    FN              reduce using rule 34 (expr -> FALSE .)
    :               reduce using rule 34 (expr -> FALSE .)
    ,               reduce using rule 34 (expr -> FALSE .)


state 16

    (35) expr -> TRUE .
    SEP             reduce using rule 35 (expr -> TRUE .)
    %               reduce using rule 35 (expr -> TRUE .)
    /               reduce using rule 35 (expr -> TRUE .)
    *               reduce using rule 35 (expr -> TRUE .)
    -               reduce using rule 35 (expr -> TRUE .)
    +               reduce using rule 35 (expr -> TRUE .)
    |               reduce using rule 35 (expr -> TRUE .)
    ^               reduce using rule 35 (expr -> TRUE .)
    &               reduce using rule 35 (expr -> TRUE .)
    GREATER         reduce using rule 35 (expr -> TRUE .)
    LESS            reduce using rule 35 (expr -> TRUE .)
    OR              reduce using rule 35 (expr -> TRUE .)
    AND             reduce using rule 35 (expr -> TRUE .)
    GREATEREQ       reduce using rule 35 (expr -> TRUE .)
    LESSEQ          reduce using rule 35 (expr -> TRUE .)
    NOTEQ           reduce using rule 35 (expr -> TRUE .)
    EQEQ            reduce using rule 35 (expr -> TRUE .)
    ?               reduce using rule 35 (expr -> TRUE .)
    )               reduce using rule 35 (expr -> TRUE .)
    {               reduce using rule 35 (expr -> TRUE .)
    LET             reduce using rule 35 (expr -> TRUE .)
    FALSE           reduce using rule 35 (expr -> TRUE .)
    TRUE            reduce using rule 35 (expr -> TRUE .)
    STRING          reduce using rule 35 (expr -> TRUE .)
    FLOAT           reduce using rule 35 (expr -> TRUE .)
    INT             reduce using rule 35 (expr -> TRUE .)
    (               reduce using rule 35 (expr -> TRUE .)
    !               reduce using rule 35 (expr -> TRUE .)
    ID              reduce using rule 35 (expr -> TRUE .)
    DEC             reduce using rule 35 (expr -> TRUE .)
    INC             reduce using rule 35 (expr -> TRUE .)
    IF              reduce using rule 35 (expr -> TRUE .)
    FOR             reduce using rule 35 (expr -> TRUE .)
    WHILE           reduce using rule 35 (expr -> TRUE .)
    RETURN          reduce using rule 35 (expr -> TRUE .)
    FN              reduce using rule 35 (expr -> TRUE .)
    :               reduce using rule 35 (expr -> TRUE .)
    ,               reduce using rule 35 (expr -> TRUE .)


state 17

    (36) expr -> STRING .
    SEP             reduce using rule 36 (expr -> STRING .)
    %               reduce using rule 36 (expr -> STRING .)
    /               reduce using rule 36 (expr -> STRING .)
    *               reduce using rule 36 (expr -> STRING .)
    -               reduce using rule 36 (expr -> STRING .)
    +               reduce using rule 36 (expr -> STRING .)
    |               reduce using rule 36 (expr -> STRING .)
    ^               reduce using rule 36 (expr -> STRING .)
    &               reduce using rule 36 (expr -> STRING .)
    GREATER         reduce using rule 36 (expr -> STRING .)
    LESS            reduce using rule 36 (expr -> STRING .)
    OR              reduce using rule 36 (expr -> STRING .)
    AND             reduce using rule 36 (expr -> STRING .)
    GREATEREQ       reduce using rule 36 (expr -> STRING .)
    LESSEQ          reduce using rule 36 (expr -> STRING .)
    NOTEQ           reduce using rule 36 (expr -> STRING .)
    EQEQ            reduce using rule 36 (expr -> STRING .)
    ?               reduce using rule 36 (expr -> STRING .)
    )               reduce using rule 36 (expr -> STRING .)
    {               reduce using rule 36 (expr -> STRING .)
    LET             reduce using rule 36 (expr -> STRING .)
    FALSE           reduce using rule 36 (expr -> STRING .)
    TRUE            reduce using rule 36 (expr -> STRING .)
    STRING          reduce using rule 36 (expr -> STRING .)
    FLOAT           reduce using rule 36 (expr -> STRING .)
    INT             reduce using rule 36 (expr -> STRING .)
    (               reduce using rule 36 (expr -> STRING .)
    !               reduce using rule 36 (expr -> STRING .)
    ID              reduce using rule 36 (expr -> STRING .)
    DEC             reduce using rule 36 (expr -> STRING .)
    INC             reduce using rule 36 (expr -> STRING .)
    IF              reduce using rule 36 (expr -> STRING .)
    FOR             reduce using rule 36 (expr -> STRING .)
    WHILE           reduce using rule 36 (expr -> STRING .)
    RETURN          reduce using rule 36 (expr -> STRING .)
    FN              reduce using rule 36 (expr -> STRING .)
    :               reduce using rule 36 (expr -> STRING .)
    ,               reduce using rule 36 (expr -> STRING .)


state 18

    (37) expr -> FLOAT .
    SEP             reduce using rule 37 (expr -> FLOAT .)
    %               reduce using rule 37 (expr -> FLOAT .)
    /               reduce using rule 37 (expr -> FLOAT .)
    *               reduce using rule 37 (expr -> FLOAT .)
    -               reduce using rule 37 (expr -> FLOAT .)
    +               reduce using rule 37 (expr -> FLOAT .)
    |               reduce using rule 37 (expr -> FLOAT .)
    ^               reduce using rule 37 (expr -> FLOAT .)
    &               reduce using rule 37 (expr -> FLOAT .)
    GREATER         reduce using rule 37 (expr -> FLOAT .)
    LESS            reduce using rule 37 (expr -> FLOAT .)
    OR              reduce using rule 37 (expr -> FLOAT .)
    AND             reduce using rule 37 (expr -> FLOAT .)
    GREATEREQ       reduce using rule 37 (expr -> FLOAT .)
    LESSEQ          reduce using rule 37 (expr -> FLOAT .)
    NOTEQ           reduce using rule 37 (expr -> FLOAT .)
    EQEQ            reduce using rule 37 (expr -> FLOAT .)
    ?               reduce using rule 37 (expr -> FLOAT .)
    )               reduce using rule 37 (expr -> FLOAT .)
    {               reduce using rule 37 (expr -> FLOAT .)
    LET             reduce using rule 37 (expr -> FLOAT .)
    FALSE           reduce using rule 37 (expr -> FLOAT .)
    TRUE            reduce using rule 37 (expr -> FLOAT .)
    STRING          reduce using rule 37 (expr -> FLOAT .)
    FLOAT           reduce using rule 37 (expr -> FLOAT .)
    INT             reduce using rule 37 (expr -> FLOAT .)
    (               reduce using rule 37 (expr -> FLOAT .)
    !               reduce using rule 37 (expr -> FLOAT .)
    ID              reduce using rule 37 (expr -> FLOAT .)
    DEC             reduce using rule 37 (expr -> FLOAT .)
    INC             reduce using rule 37 (expr -> FLOAT .)
    IF              reduce using rule 37 (expr -> FLOAT .)
    FOR             reduce using rule 37 (expr -> FLOAT .)
    WHILE           reduce using rule 37 (expr -> FLOAT .)
    RETURN          reduce using rule 37 (expr -> FLOAT .)
    FN              reduce using rule 37 (expr -> FLOAT .)
    :               reduce using rule 37 (expr -> FLOAT .)
    ,               reduce using rule 37 (expr -> FLOAT .)


state 19
